@@ -1,5 +1,6 @@
 Version 1.0.xxxx (January xxth 2014)
 - Implemented: Initial Support for Forecast.io
+- Implemented: Temperature/Weaher widgets forecast button if hardware is WU/Forecast.io
 
 Version 1.0.1396 (January 18th 2014)
 - Implemented: new commandline option to specify www root folder (-wwwroot)
